migration creation and bug fix

--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "@electron-toolkit/utils": "^2.0.0",
     "electron-updater": "^6.1.1",
     "jsmediatags": "^3.9.7",
+    "knex": "^2.5.1",
+    "nedb": "^1.8.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.1",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
@@ -33,9 +37,11 @@
     "@electron-toolkit/eslint-config-ts": "^1.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@types/jsmediatags": "^3.9.4",
+    "@types/nedb": "^1.8.14",
     "@types/node": "^18.17.5",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/sqlite3": "^3.1.9",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.15",
     "electron": "^25.6.0",
